--- a/ece531.org
+++ b/ece531.org
@@ -12,21 +12,37 @@ N/A
    - [X] Provision hd with 50-100 gb
    - [X] Install as new VM
    - [X] Install VMWware Tools for file transfer
-*** TODO Configure devbox with following tools. [1/2]
-   - [-] BASIC TOOLS: [4/5]
-     - [ ] ssh
+*** TODO Configure devbox with following tools. [2/2]
+   - [X] BASIC TOOLS: [5/5]
+     - [X] ssh
      - [X] tmux
      - [X] powerline
      - [X] chrome
      - [X] git tools
    - [X] ADVANCED TOOLS: [1/1]
      - [X] VMware Workstation (inside ubuntu)
-*** TODO Configure deployment box (vm inside vm) [1/3]
-   - [ ] Dolwnload QEMU
-   - [ ] Download buildroot
+*** TODO Configure deployment box (vm inside vm) [3/3]
+   - [X] Dolwnload QEMU
+   - [X] Download buildroot
    - [X] select vagrant or direct install method
+*** TODO Download & Analyze HS110 [2/4]
+   - [X] Download firmware
+   - [X] Run binwalk on binary
+   - [-] Review output of binwalk [2/5]
+     - [X] run and save entropy graph
+     - [X] run '$ strings -n 10 10300 > strings.out'
+     - [ ] run '$ strings -n 10 439C > 439C-strings.out'
+     - [ ] explore f/s i.e. 'squashfs-root:$ tree bin' & 'etc:$ tree .'
+     - [ ] hone in on start up ps's i.e. shd 'usr/bin:$ tree .'
+   - [ ] Analyze applications found in the firmware
+     - [ ] Quick Inventory
+     - [ ] Static Analysis
+     - [ ] Dynamic Analysis
+       - [ ] run in emulator, QEMU.  copy qemu-*-static into the binwalk output directory you're working in.
+     - [ ] Tools: GDB, LLDB, binutils, DTrace, Strace, 
 *** COMMENTS: 
 **** BUILDROOT / be careful with net dev, net user, nic info in qemu start up script.
+**** BINWALK / needed to install matplot lib for entropy png.
 ** Module 3
 ** Module 4
 ** Module 5
