--- a/ece531.org
+++ b/ece531.org
@@ -16,6 +16,18 @@
     - [[#owasp-model-template][OWASP Model Template]]
     - [[#assignment-nc220-firmware-analysis-use-owasp-model-00][Assignment: NC220 Firmware Analysis (use OWASP model)]]
   - [[#module-3][Module 3]]
+    - [[#goals][GOALS:]]
+      - [[#a][A]]
+      - [[#b][B]]
+    - [[#videos--slides][Videos / Slides]]
+      - [[#project-development-and-attack-surfaces][Project, Development, and Attack Surfaces]]
+        - [[#project-i--iot_3_1_1mp4][Project (I) / IoT_3_1_1.mp4]]
+        - [[#project-ii--iot_3_1_2mp4][Project (II) / IoT_3_1_2.mp4]]
+        - [[#personal-development-process--iot_3_1_3mp4][Personal Development Process / IoT_3_1_3.mp4]]
+        - [[#attack-surfaces--iot_3_1_4mp4][Attack Surfaces / IoT_3_1_4.mp4]]
+        - [[#networking-support-and-buildroot--iot_3_2_1mp4][Networking Support and Buildroot / IoT_3_2_1.mp4]]
+      - [[#networking][Networking]]
+      - [[#linking--loading][Linking & Loading]]
   - [[#module-4][Module 4]]
   - [[#module-5][Module 5]]
   - [[#modu-le-6][Modu le 6]]
@@ -197,6 +209,60 @@ Dynamic section at offset 0xe8 contains 24 entries:
      4. Binary Exploitation
 
 ** Module 3
+
+*** GOALS:
+**** A
+     - Devolop and analyze an attack surface of an IoT System
+     - Implement client comms via networking
+     - Use ELF on binaries
+     - Review linking and loading
+**** B
+     - Implement Networking Communication
+     - Recognize essential properties of ARM Chipsets
+*** Videos / Slides
+**** Project, Development, and Attack Surfaces
+***** Project (I) / IoT_3_1_1.mp4
+      - Large project, full system, lots of programming, best practices, well documented, secure, fully functional...
+      - Keywords: best practices, modular c, attack surface, 
+***** Project (II) / IoT_3_1_2.mp4
+      - Emulate a Thermostat
+        - Minimum 3 set points over a day
+          - Extra credit for more set points: Weekends, calendars, weekly programs, etc
+        - works in degrees C
+        - assumes thermocouple
+        - program remotely via HTTP
+        - report remotely via HTTP (dashboard?)
+        - split programming into application (user) and interface (software / hardware)
+        - will pe programmed via a known file with a time stamp and instructions for heat on/off
+***** Personal Development Process / IoT_3_1_3.mp4
+      - Repeatable workflow: first steps, makefile design, general structure, testing?, delivery of production?
+      - Speed
+      - Quality
+      - Workflow Model, i.e.
+        1. Template / Skeleton / necessary basic files?
+        2. Functions defined in single file? or Each module in single file?
+        3. Ea file has associated test?
+        4. Application have discrete libraries, 'main' use minimized?
+        5. Automated tests, nightly, against repository?
+        6. Automated nightly builds?
+        7. etc.
+***** Attack Surfaces / IoT_3_1_4.mp4
+      - What it is
+        - Anything a system touches or reads is potential attack.
+        - IoT devices especially have very large attack surfaces; bluetooth, wifi, http, 5g, etc.
+      - Importance
+        - describes Ingress & Egress pathways
+        - how sys can be improved / hardened
+        - what is safe to neglect / ignore
+      - How & Where to document it (not inside the source code!)
+        - Create a discrete document / outline for internal use
+      - Example ('ls')
+      - Hardening
+      - Keywords: well-formed environment variables, buffer lengths, well-formatted submitted data, malformed argument attack
+***** Networking Support and Buildroot / IoT_3_2_1.mp4
+      - 
+**** Networking
+**** Linking & Loading
 ** Module 4
 ** Module 5
 ** Modu le 6
