--- a/ece531.org
+++ b/ece531.org
@@ -26,6 +26,14 @@
         - [[#personal-development-process--iot_3_1_3mp4][Personal Development Process / IoT_3_1_3.mp4]]
         - [[#attack-surfaces--iot_3_1_4mp4][Attack Surfaces / IoT_3_1_4.mp4]]
         - [[#networking-support-and-buildroot--iot_3_2_1mp4][Networking Support and Buildroot / IoT_3_2_1.mp4]]
+          - [[#making-modifications-to-buildroot-image][Making modifications to buildroot image:]]
+          - [[#modify-buildroot-image-to-include-libraries-networking-libcur-curl][Modify buildroot image to include libraries-networking-libcur, curl]]
+          - [[#rebuild-image-and-test-see-above][Rebuild image and test (see above)]]
+        - [[#networking-configurations--iot_3_2_2mp4][Networking Configurations / IoT_3_2_2.mp4]]
+          - [[#protocols-slirp-vs-tap][Protocols, SLIRP vs TAP]]
+          - [[#run-simplehttpserver-on-host-22][Run SimpleHTTPServer on HOST]]
+        - [[#looking-over-libcurlso--iot_3_2_3mp4][Looking Over Libcurl.so / IoT_3_2_3.mp4]]
+          - [[#][]]
       - [[#networking][Networking]]
       - [[#linking--loading][Linking & Loading]]
       - [[#misc--refs--urls][MISC / REFs / URLs]]
@@ -262,17 +270,32 @@ Dynamic section at offset 0xe8 contains 24 entries:
       - Hardening
       - Keywords: well-formed environment variables, buffer lengths, well-formatted submitted data, malformed argument attack
 ***** Networking Support and Buildroot / IoT_3_2_1.mp4
-      - Buildroot Image Modifications:
-#+BEGIN_EXAMPLE
-#By default buildroot tracks one build, if want a separate, save 'out of tree'
-1. $> make nconfig #Make edits / changes / save
-2. $> make
-3. run the start script
-4. log in as root
-5. $> adduser -h /<home_dir> -s /bin/sh <username>
-6. modify /etc/shadow for new account, make :10933: change
-7. test login with user
-#+END_EXAMPLE
+****** Making modifications to buildroot image:
+ #+BEGIN_EXAMPLE
+ #By default buildroot tracks one build, if want a separate, save 'out of tree'
+ 1. $> make nconfig #Make edits / changes / save
+ 2. $> make
+ 3. run the start script (MAKE SURE TO USE MODIFIED SCRIPT FOR SSH, I.E. TEST-QEMU)
+ 4. log in as root
+ 5. $> adduser -h /<home_dir> -s /bin/sh <username>
+ 6. modify /etc/shadow for new account, make :10933: change
+ 7. test login with user
+ 8. log out & test SSH connection ( ssh -p 222 sgc@localhost )
+ 9. log out & test SCP from host to virt ( scp -P 2222 ./test sgc@localhost:~/ )
+ 10. test execution ./test (may have to run chmod +x on file)
+ 11. Complete, modfied Buildroot image ready to use.
+ #+END_EXAMPLE
+****** Modify buildroot image to include libraries-networking-libcur, curl
+****** Rebuild image and test (see above)
+***** Networking Configurations / IoT_3_2_2.mp4
+****** Protocols, SLIRP vs TAP
+       - SLIRP like serial, slow but low overhead, will stay connected
+       - TAP uses virtual networking, will require PHY NIC, which would cause us CNX problems with Virt - Host, stick w/ SLIRP
+****** Run SimpleHTTPServer on HOST [2/2]
+       - [X] (from host) $ sudo python2 -m SimpleHTTPServer 80 (using python2 since host has both 2/3)
+       - [X] (from qemu) $ curl -v 192.168.45.128 (confirmed IP of host first)
+***** Looking Over Libcurl.so / IoT_3_2_3.mp4
+****** 
 **** Networking
 **** Linking & Loading
 **** MISC / REFs / URLs
