--- a/ece531.org
+++ b/ece531.org
@@ -45,9 +45,13 @@
       - [[#misc--refs--urls][MISC / REFs / URLs]]
         - [[#sample-projects][Sample Projects:]]
     - [[#homework][Homework]]
+    - [[#footnotes][FOOTNOTES:]]
+      - [[#testing-code-changes][Testing Code Changes:]]
+        - [[#workflow][WORKFLOW]]
+      - [[#more-notes][More Notes...]]
   - [[#module-4][Module 4]]
   - [[#module-5][Module 5]]
-  - [[#modu-le-6][Modu le 6]]
+  - [[#module-6][Module 6]]
   - [[#module-7][Module 7]]
   - [[#module-8][Module 8]]
   - [[#misc-info--notes][Misc Info / Notes]]
@@ -345,20 +349,21 @@ Dynamic section at offset 0xe8 contains 24 entries:
   - [X] Component Tests [2/2]
     - [X] Test getopt.h
     - [X] Test curl/curl.h
-  - [ ] Framework [0/9]
-    - [ ] INCLUDES / LIBRARIES
+  - [-] Framework [5/8]
+    - [X] INCLUDES / LIBRARIES
       - unistd.h
       - stdio.h
       - stdlib.h
       - getopt.h
       - string.h
-    - [ ] CONSTANTS
+      - errno.h
+    - [X] GLOBAL CONSTANTS
       - OK 0
       - INIT_ERR 1
       - REQ_ERR 2
-    - [ ] VARIABLES
-      - [ ] modes / use for mutually exclusive option filter
-    - [ ] FUNCTIONS
+    - [X] GLOBAL VARIABLES
+      - [X] modes / use for mutually exclusive option filter
+    - [X] GLOBAL FUNCTIONS
       - void curl_get
       - void curl_post
       - void curl_put
@@ -366,7 +371,7 @@ Dynamic section at offset 0xe8 contains 24 entries:
       - void hw_help
       - void hw_usage
       - void hw_version
-    - [ ] USER ARGUMENTS
+    - [X] MAIN // ARGUMENTS
       - arguments.get
       - arguments.post
       - arguments.put
@@ -375,34 +380,54 @@ Dynamic section at offset 0xe8 contains 24 entries:
       - arguments.version
       - arguments.url
       - arguments.data
-    - [ ] CASES - NOMINAL
-      - exclusive get
-      - exclusive post
-      - exclusive put
-      - exclusive delete
-    - [ ] CASES - EDGE / FAIL
-      - error, too few args
-      - error, too many args
-      - error, no url
-      - error, unrecognized url (malformed)
-    - [ ] RESPONSES
-    - [ ] MAIN
-  - [ ] TESTING [0/2]
-    - [ ] x86 TEST [0/3]
-      - [ ] COMPILE
-      - [ ] TEST PROPER USE
+    - [ ] MAIN // VARIABLES [0/5]
+      - [ ] State Flags: INT gflag, oflag, pflag, dflag
+      - [ ] Curl args: int c, char *message, char *url, CURL *curl, CURLCode res
+      - [ ] getopt struct: -g --get, -o --post, -p --put, -d --delete, 
+      - [ ] make mutually exclusive, can only choose one of -g || -o || -p || -d
+      - [ ] capture 'non-argument' options for *message
+    - [ ] CASES - EDGE / FAIL [0/4]
+      - [ ] error, too few args
+      - [ ] error, too many args
+      - [ ] error, no url
+      - [ ] error, malformed url
+    - [-] RESPONSES [1/5] 
+      - [X] capture curl codes
+      - [ ] print strerror / errno.h messages
+      - [ ] USAGE message
+      - [ ] VERSION message
+      - [ ] HELP message
+  - [-] TESTING [0/2]
+    - [-] x86 TEST [2/3]
+      - [X] COMPILE
+      - [X] TEST PROPER USE
       - [ ] TEST IMPROPER USE
-    - [ ] ARM/MIPS TEST [0/3]
-      - [ ] COMPILE
-      - [ ] TEST PROPER USE
+    - [-] ARM/MIPS TEST [2/3]
+      - [X] COMPILE
+      - [X] TEST PROPER USE
       - [ ] TEST IMPROPER USE
   - [ ] DEPLOY [0/3]
     - [ ] FINALIZE COMMENTS / EDITS
     - [ ] SANITIZE, REMOVE ANY DEBUG DATA
     - [ ] FINAL COMMITS / VERSIONING / VCS
+*** FOOTNOTES:
+**** Testing Code Changes:
+#+BEGIN_EXAMPLE
+***** WORKFLOW
+ 1. Make code edits, x86
+ 2. re run Make, x86
+ 3. test changes in x86
+ 4. run the 'amake' alias or 'make -f makefile-arm' for ARM build
+ 5. start qemu guest ([user@host ~]$ ./test-qemu.sh)
+ 6. confirm network connection between host and guest
+ 7. start python http server on host ([user@host ~]$ python2 -m SimpleHTTPServer
+ 8. copy arm compiled binary to guest ([user@host ~]$ scp -P 2222 my-file sgc@localhost:~/)
+ 9. run from guest, pointed to host, test use cases.  DONE
+ #+END_EXAMPLE
+**** More Notes... 
 ** Module 4
 ** Module 5
-** Modu le 6
+** Module 6
 ** Module 7
 ** Module 8
 ** Misc Info / Notes
